apps/infra/umami/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: umami
        image: ghcr.io/umami-software/umami
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /api/heartbeat
            port: http
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /api/heartbeat
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
      restartPolicy: Always
