apps/infra/umami/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
