apps/infra/umami/base/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - umami
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: umami
            port:
              number: 3000
